--- a/src/wp-content/themes/tuleva/scss/_jobs-page.scss
+++ b/src/wp-content/themes/tuleva/scss/_jobs-page.scss
@@ -18,6 +18,10 @@
         &.active .collapse-lg-none {
             @include media-breakpoint-down(lg) {
                 display: block;
+
+                .h1 {
+                    margin-bottom: 2rem !important;
+                }
             }
         }
     }
